--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@types/luxon": "^3.1.0",
     "ap-style-title-case": "^2.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
+    "markdown-to-jsx": "^7.1.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
