--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/font": "13.1.1",
     "@types/luxon": "^3.1.0",
     "ap-style-title-case": "^2.0.0",
+    "exifreader": "^4.9.1",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
     "markdown-to-jsx": "^7.1.8",
