--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint --fix",
+    "prebuild": "ts-node -P ./prebuild/tsconfig.json ./prebuild/index.ts",
     "prepare": "husky install",
     "start": "next start"
   },
@@ -42,6 +43,7 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.4"
   }
 }
