--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/luxon": "^3.1.0",
     "ap-style-title-case": "^2.0.0",
     "exifreader": "^4.9.1",
+    "joi": "^17.8.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
     "markdown-to-jsx": "^7.1.8",
