--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "next lint --fix",
     "prebuild": "ts-node -P ./prebuild/tsconfig.json ./prebuild/index.ts",
     "prepare": "husky install",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -30,10 +31,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "eslint": "8.30.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -42,6 +47,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security": "^1.5.0",
     "husky": "^8.0.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
