--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@types/luxon": "^3.1.0",
-    "ap-style-title-case": "^2.0.0",
     "exifreader": "^4.9.1",
     "joi": "^17.8.3",
     "lodash": "^4.17.21",
@@ -29,7 +28,8 @@
     "markdown-to-jsx": "^7.1.8",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "title-case": "^3.0.3"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.296.0",
