--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "title-case": "^3.0.3"
+    "title-case": "^3.0.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.296.0",
