--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@types/luxon": "^3.1.0",
-    "exifreader": "^4.9.1",
     "joi": "^17.8.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
@@ -39,21 +37,24 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/imagemagick": "^0.0.31",
     "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.1.0",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react": "18.0.26",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "eslint": "8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security": "^1.5.0",
+    "eslint": "8.30.0",
+    "exifreader": "^4.9.1",
     "husky": "^8.0.2",
     "imagemagick": "^0.1.3",
-    "jest": "^29.5.0",
+    "inquirer": "^9.2.10",
     "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.5.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
