--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.296.0",
+    "@inquirer/prompts": "^3.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -39,22 +40,21 @@
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
     "@types/node": "18.11.18",
-    "@types/react-dom": "18.0.10",
     "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "eslint": "8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security": "^1.5.0",
-    "eslint": "8.30.0",
     "exifreader": "^4.9.1",
     "husky": "^8.0.2",
     "imagemagick": "^0.1.3",
-    "inquirer": "^9.2.10",
-    "jest-environment-jsdom": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
