--- a/src/content/photos/approaching-loch-coruisk.json
+++ b/src/content/photos/approaching-loch-coruisk.json
@@ -1,7 +1,7 @@
 {
   "title": "Approaching Loch Coruisk",
   "meta": {
-    "location": "Loch na Cuilce",
+    "location": "Loch Coruisk",
     "tags": [
       "Landscape",
       "Loch"
