--- a/src/content/photos/snowdrops-in-loweswater.json
+++ b/src/content/photos/snowdrops-in-loweswater.json
@@ -7,7 +7,7 @@
     },
     "location": "Loweswater",
     "tags": [
-      "Flowers"
+      "Flowers & Insects"
     ],
     "trip": "2023-02-11-burnbank-fell-blake-fell-gavel-fell-hen-comb"
   },
