--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://jesskelsall.com"
   },
   "scripts": {
-    "addphotos": "ts-node -P ./scripts/tsconfig.json ./scripts/addGalleryPhotos.ts",
+    "addphotos": "npm run prebuild && ts-node -P ./scripts/tsconfig.json ./scripts/addGalleryPhotos.ts",
     "addtrip": "ts-node -P ./scripts/tsconfig.json ./scripts/addTrip.ts",
     "build": "next build",
     "dev": "npm run prebuild && next dev",
