Photos: Cairngorms & Aberfeldy 2/2

--- a/src/content/photos/moon-and-snowy-trees-231203a.json
+++ b/src/content/photos/moon-and-snowy-trees-231203a.json
@@ -1,10 +1,10 @@
 {
-  "title": "Kenmore Church Graveyard",
+  "title": "Moon and Snowy Trees",
   "meta": {
-    "location": "Kenmore",
+    "location": "Loch Morlich",
     "tags": [
       "Landscape",
-      "Church/Cathedral",
+      "Forest",
       "Snow"
     ],
     "trip": "2023-12-01-cairngorms-aberfeldy"
@@ -15,16 +15,16 @@
       "lens": "Sony FE 24-70mm F2.8 GM II",
       "settings": {
         "exposureBias": 0,
-        "exposureTime": 0.016666666666666666,
-        "focalLength": 57,
-        "fStop": 16,
-        "ISO": 1600
+        "exposureTime": 0.008,
+        "focalLength": 39,
+        "fStop": 11,
+        "ISO": 1000
       }
     },
-    "date": "2023-12-02T10:20:24.000+00:00",
+    "date": "2023-12-03T09:42:05.000+00:00",
     "dimensions": {
-      "height": 5824,
-      "width": 8736
+      "height": 6336,
+      "width": 9504
     }
   }
 }
