--- a/src/content/photos/across-snowy-rooftops-231202.json
+++ b/src/content/photos/across-snowy-rooftops-231202.json
@@ -8,14 +8,9 @@
       "Loch",
       "Snow"
     ],
-    "trip": null
+    "trip": "2023-12-01-cairngorms-aberfeldy"
   },
   "exif": {
-    "date": "2023-12-02T10:17:37.000+00:00",
-    "dimensions": {
-      "height": 6244,
-      "width": 9367
-    },
     "camera": {
       "name": "Sony ɑ7R V",
       "lens": "Sony FE 24-70mm F2.8 GM II",
@@ -26,6 +21,11 @@
         "fStop": 4,
         "ISO": 100
       }
+    },
+    "date": "2023-12-02T10:17:37.000+00:00",
+    "dimensions": {
+      "height": 6244,
+      "width": 9367
     }
   }
 }
