--- a/src/content/photos/snowy-path-231203.json
+++ b/src/content/photos/snowy-path-231203.json
@@ -1,12 +1,10 @@
 {
-  "title": "Sunset Over Frozen Loch Morlich",
+  "title": "Snowy Path",
   "meta": {
-    "location": "Loch Morlich",
+    "location": "Cairngorm Mountains",
     "tags": [
       "Landscape",
-      "Loch",
-      "Snow",
-      "Sunrise/Sunset"
+      "Snow"
     ],
     "trip": "2023-12-01-cairngorms-aberfeldy"
   },
@@ -15,17 +13,17 @@
       "name": "Sony ɑ7R V",
       "lens": "Sony FE 24-70mm F2.8 GM II",
       "settings": {
-        "exposureBias": 0,
+        "exposureBias": 0.7,
         "exposureTime": 0.03333333333333333,
-        "focalLength": 70,
-        "fStop": 14,
-        "ISO": 1000
+        "focalLength": 24,
+        "fStop": 22,
+        "ISO": 250
       }
     },
-    "date": "2023-12-02T15:34:03.000+00:00",
+    "date": "2023-12-03T12:42:49.000+00:00",
     "dimensions": {
-      "height": 5655,
-      "width": 8482
+      "height": 5955,
+      "width": 8933
     }
   }
 }
