--- a/src/content/photos/snowy-trees-231202.json
+++ b/src/content/photos/snowy-trees-231202.json
@@ -7,14 +7,9 @@
       "Loch",
       "Snow"
     ],
-    "trip": null
+    "trip": "2023-12-01-cairngorms-aberfeldy"
   },
   "exif": {
-    "date": "2023-12-02T10:25:29.000+00:00",
-    "dimensions": {
-      "height": 6336,
-      "width": 9504
-    },
     "camera": {
       "name": "Sony ɑ7R V",
       "lens": "Sony FE 24-70mm F2.8 GM II",
@@ -25,6 +20,11 @@
         "fStop": 8,
         "ISO": 50
       }
+    },
+    "date": "2023-12-02T10:25:29.000+00:00",
+    "dimensions": {
+      "height": 6336,
+      "width": 9504
     }
   }
 }
