Annual awards tags, 2022

--- a/src/content/photos/approaching-loch-coruisk-220814.json
+++ b/src/content/photos/approaching-loch-coruisk-220814.json
@@ -4,7 +4,8 @@
     "location": "Loch Coruisk",
     "tags": [
       "Landscape",
-      "Loch"
+      "Loch",
+      "Annual Top 10"
     ],
     "gps": {
       "lat": 57.19639166666666,
