--- a/src/content/photos/york-minster-easter-window-231230.json
+++ b/src/content/photos/york-minster-easter-window-231230.json
@@ -1,27 +1,26 @@
 {
-  "title": "Whitby Abbey",
+  "title": "York Minster Easter Window",
   "meta": {
-    "location": "Whitby",
+    "location": "York Minster",
     "tags": [
-      "Landscape",
-      "Church/Cathedral",
-      "Ruin"
+      "Interior",
+      "Church/Cathedral"
     ],
     "trip": "2023-12-30-new-years-away"
   },
   "exif": {
     "camera": {
       "name": "Sony ɑ7R V",
-      "lens": "Sony FE 24-70mm F2.8 GM II",
+      "lens": "Sony FE 24mm F1.4",
       "settings": {
         "exposureBias": -0.3,
-        "exposureTime": 0.005,
-        "focalLength": 70,
-        "fStop": 5,
+        "exposureTime": 0.02,
+        "focalLength": 24,
+        "fStop": 1.4,
         "ISO": 100
       }
     },
-    "date": "2024-01-01T12:17:12.000+00:00",
+    "date": "2023-12-30T14:25:13.000+00:00",
     "dimensions": {
       "height": 6336,
       "width": 9504
