--- a/src/content/photos/helsingin-paarautatieasema-exterior-240324.json
+++ b/src/content/photos/helsingin-paarautatieasema-exterior-240324.json
@@ -1,10 +1,9 @@
 {
-  "title": "Meritullinkatu",
+  "title": "Helsingin Päärautatieasema Exterior",
   "meta": {
-    "location": "Kruununhaka",
+    "location": "Kluuvi",
     "tags": [
-      "Landscape",
-      "Street"
+      "Landscape"
     ],
     "trip": "2024-03-22-helsinki"
   },
@@ -14,16 +13,16 @@
       "lens": "Sony FE 24-70mm F2.8 GM II",
       "settings": {
         "exposureBias": 0,
-        "exposureTime": 0.00625,
-        "focalLength": 70,
-        "fStop": 3.5,
+        "exposureTime": 0.01,
+        "focalLength": 56,
+        "fStop": 4.5,
         "ISO": 50
       }
     },
-    "date": "2024-03-23T10:14:24.000+00:00",
+    "date": "2024-03-24T10:38:09.000+00:00",
     "dimensions": {
-      "height": 5636,
-      "width": 8452
+      "height": 6336,
+      "width": 9504
     }
   }
 }
