--- a/src/content/photos/helsingin-paarautatieasema-interior-240324.json
+++ b/src/content/photos/helsingin-paarautatieasema-interior-240324.json
@@ -1,10 +1,9 @@
 {
-  "title": "Aleksanterinkatu",
+  "title": "Helsingin Päärautatieasema Interior",
   "meta": {
-    "location": "Kruununhaka",
+    "location": "Kluuvi",
     "tags": [
-      "Landscape",
-      "Street"
+      "Interior"
     ],
     "trip": "2024-03-22-helsinki"
   },
@@ -13,17 +12,17 @@
       "name": "Sony ɑ7R V",
       "lens": "Sony FE 24-70mm F2.8 GM II",
       "settings": {
-        "exposureBias": 0.7,
+        "exposureBias": 0,
         "exposureTime": 0.03333333333333333,
-        "focalLength": 45,
-        "fStop": 5,
-        "ISO": 50
+        "focalLength": 25,
+        "fStop": 3.2,
+        "ISO": 160
       }
     },
-    "date": "2024-03-23T08:36:29.000+00:00",
+    "date": "2024-03-24T10:40:05.000+00:00",
     "dimensions": {
-      "height": 5357,
-      "width": 8036
+      "height": 6162,
+      "width": 9244
     }
   }
 }
