Photos: Aurora at Clatteringshaws Loch

--- a/src/content/photos/snowdrops-at-brampton-240218a.json
+++ b/src/content/photos/snowdrops-at-brampton-240218a.json
@@ -1,7 +1,7 @@
 {
   "title": "Snowdrops at Brampton",
   "meta": {
-    "location": "Cumbria",
+    "location": "Brampton",
     "tags": [
       "Flowers & Insects"
     ],
