--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "email": "hi@jesskelsall.dev",
     "url": "https://jesskelsall.com"
   },
+  "engines": {
+    "node": ">= 20.0.0"
+  },
   "scripts": {
     "addphotos": "npm run prebuild && ts-node -P ./scripts/tsconfig.json ./scripts/addGalleryPhotos.ts",
     "addtrip": "ts-node -P ./scripts/tsconfig.json ./scripts/addTrip.ts",
@@ -21,14 +24,13 @@
     "test": "jest --config jest.config.js"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
     "joi": "^17.8.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
     "markdown-to-jsx": "^7.1.8",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "title-case": "^3.0.3",
     "zod": "^3.21.4"
   },
@@ -42,8 +44,8 @@
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "eslint": "8.30.0",
@@ -60,6 +62,6 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.4"
+    "typescript": "^5.7.2"
   }
 }
