--- a/package.json
+++ b/package.json
@@ -48,19 +48,23 @@
     "@types/react-dom": "^18.3.1",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "exifreader": "^4.25.0",
     "husky": "^8.0.2",
     "imagemagick": "^0.1.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^15.2.10",
+    "postcss": "^8.4.49",
     "prettier": "^2.8.1",
+    "tailwindcss": "^3.4.15",
     "ts-node": "^10.9.1",
     "typescript": "^5.7.2"
   }
