--- a/src/content/photos/appletreewick-230916.json
+++ b/src/content/photos/appletreewick-230916.json
@@ -1,7 +1,7 @@
 {
   "title": "Appletreewick",
   "meta": {
-    "location": "Yorkshire Dales",
+    "location": "Appletreewick",
     "tags": [
       "Landscape",
       "Street"
