Photos: Cairngorm Reindeer Herd 8+9

--- a/src/content/photos/snowy-path-231203.json
+++ b/src/content/photos/snowy-path-231203.json
@@ -1,7 +1,7 @@
 {
   "title": "Snowy Path",
   "meta": {
-    "location": "Cairngorm Mountains",
+    "location": "Cairngorm Reindeer Herd",
     "tags": [
       "Landscape",
       "Snow",
