Photos: Skye, Lewis & Harris 2/7

--- a/src/content/photos/st-dubhthacs-church-eastward-1-230810.json
+++ b/src/content/photos/st-dubhthacs-church-eastward-1-230810.json
@@ -1,5 +1,5 @@
 {
-  "title": "St Dubhthac's Church Eastward",
+  "title": "St Dubhthac's Church Eastward 1",
   "meta": {
     "location": "St Dubhthac's Church",
     "tags": [
