--- a/src/content/photos/easedale-road-251025.json
+++ b/src/content/photos/easedale-road-251025.json
@@ -1,12 +1,12 @@
 {
-  "title": "Tanner Croft and Helm Crag",
+  "title": "Easedale Road",
   "meta": {
     "location": "Grasmere (Village)",
     "tags": [
       "Landscape",
-      "Sheep"
+      "Road"
     ],
-    "trip": "2024-03-28-lake-district"
+    "trip": "2025-10-25-autumn-in-the-lake-district-durham"
   },
   "exif": {
     "camera": {
@@ -14,16 +14,16 @@
       "lens": "Sony FE 24-70mm F2.8 GM II",
       "settings": {
         "exposureBias": -0.7,
-        "exposureTime": 0.003125,
-        "focalLength": 58,
-        "fStop": 2.8,
-        "ISO": 125
+        "exposureTime": 0.02,
+        "focalLength": 36,
+        "fStop": 8,
+        "ISO": 100
       }
     },
-    "date": "2024-03-29T11:47:51.000+00:00",
+    "date": "2025-10-25T09:23:35.000+01:00",
     "dimensions": {
-      "height": 5511,
-      "width": 8266
+      "height": 6150,
+      "width": 9225
     }
   }
 }
