--- a/src/content/photos/east-london-from-the-shard-220805.json
+++ b/src/content/photos/east-london-from-the-shard-220805.json
@@ -5,7 +5,7 @@
       "lat": 51.504475,
       "long": -0.0862861111111111
     },
-    "location": "London",
+    "location": "The Shard",
     "tags": [
       "Landscape",
       "Bridge"
