--- a/src/content/photos/ardvreck-castle-from-the-east-230420.json
+++ b/src/content/photos/ardvreck-castle-from-the-east-230420.json
@@ -1,10 +1,9 @@
 {
-  "title": "Ardvreck Castle by Night",
+  "title": "Ardvreck Castle From the East",
   "meta": {
     "location": "Ardvreck Castle",
     "tags": [
-      "Astro",
-      "Annual Top 100"
+      "Astro"
     ],
     "trip": "2023-04-14-north-coast-500"
   },
@@ -14,14 +13,14 @@
       "lens": "Samyang 1:28 10mm ED AS NCS CS",
       "settings": {
         "exposureBias": 0,
-        "exposureTime": 30,
-        "ISO": 800
+        "exposureTime": 25,
+        "ISO": 1600
       }
     },
-    "date": "2023-04-20T00:16:34.000+01:00",
+    "date": "2023-04-20T00:05:28.000+01:00",
     "dimensions": {
-      "height": 2829,
-      "width": 4251
+      "height": 2892,
+      "width": 4346
     }
   }
 }
