--- a/src/content/photos/snow-capped-quinag-231021.json
+++ b/src/content/photos/snow-capped-quinag-231021.json
@@ -1,7 +1,7 @@
 {
   "title": "Snow-capped Quinag",
   "meta": {
-    "location": "Assynt-Coigach",
+    "location": "Fàire nan Càrn",
     "tags": [
       "Landscape",
       "Snow"
