Photo name update

--- a/src/content/photos/ardvreck-castle-from-the-east-251207.json
+++ b/src/content/photos/ardvreck-castle-from-the-east-251207.json
@@ -1,5 +1,5 @@
 {
-  "title": "Ardvreck Castle From Calda House",
+  "title": "Ardvreck Castle From the East",
   "meta": {
     "location": "Ardvreck Castle",
     "tags": [
